--- a/products.html
+++ b/products.html
@@ -771,20 +771,32 @@
                     <div class="section-num">1.4</div>
                     <div class="section-title">Item Code Structure</div>
                 </div>
-                <p>Item Code = <strong>Commodity</strong> + <strong>Item</strong> + <strong>Variants</strong></p>
+                <p>Item Code = <strong>Organisation</strong> + <strong>Commodity</strong> + <strong>Item</strong> + <strong>Variants</strong></p>
 
                 <!-- Code Structure Visual -->
                 <div style="background: var(--bg); padding: 16px; border-radius: 8px; margin-top: 16px;">
                     <div style="text-align: center; margin-bottom: 16px;">
                         <span style="font-family: monospace; font-size: 18px; letter-spacing: 1px;">
-                            <span style="background: #dbeafe; padding: 8px 12px; border-radius: 6px 0 0 6px; border: 2px solid #3b82f6; border-right: none;">CDM</span>
+                            <span style="background: #f3e8ff; padding: 8px 12px; border-radius: 6px 0 0 6px; border: 2px solid #8b5cf6; border-right: none;">ACM</span>
+                            <span style="background: #dbeafe; padding: 8px 12px; border-radius: 0; border: 2px solid #3b82f6; border-left: none; border-right: none;">CDM</span>
                             <span style="background: var(--warning-light); padding: 8px 12px; border-radius: 0; border: 2px solid var(--warning); border-left: none; border-right: none;">001</span>
                             <span style="background: var(--success-light); padding: 8px 12px; border-radius: 0 6px 6px 0; border: 2px solid var(--success); border-left: none;">AC01</span>
                         </span>
                     </div>
 
-                    <!-- Three Part Breakdown -->
-                    <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 12px; margin-top: 16px;">
+                    <!-- Four Part Breakdown -->
+                    <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 12px; margin-top: 16px;">
+                        <div style="background: #f3e8ff; padding: 12px; border-radius: 8px; border-top: 3px solid #8b5cf6;">
+                            <strong style="color: #6d28d9; font-size: 12px;">Organisation Code</strong>
+                            <div style="font-size: 11px; color: var(--text-light); margin-top: 6px;">
+                                Identifies the organisation
+                            </div>
+                            <div style="font-size: 10px; margin-top: 8px; padding: 6px; background: white; border-radius: 4px;">
+                                <code>ACM</code> = Acme Corp<br>
+                                <code>GLB</code> = Global Trade<br>
+                                <code>SPX</code> = Spice Exports
+                            </div>
+                        </div>
                         <div style="background: #eff6ff; padding: 12px; border-radius: 8px; border-top: 3px solid #3b82f6;">
                             <strong style="color: #1e40af; font-size: 12px;">Commodity Code</strong>
                             <div style="font-size: 11px; color: var(--text-light); margin-top: 6px;">
@@ -825,37 +837,37 @@
                 <table style="font-size: 11px; width: 100%; margin-top: 16px;">
                     <thead>
                         <tr>
-                            <th style="width: 20%;">Item Code</th>
-                            <th style="width: 30%;">Description</th>
+                            <th style="width: 25%;">Item Code</th>
+                            <th style="width: 25%;">Description</th>
                             <th>Breakdown</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr style="background: var(--success-light);">
-                            <td><code style="font-weight: bold;">CDM001AC01</code></td>
+                            <td><code style="font-weight: bold;">ACMCDM001AC01</code></td>
                             <td>Cardamom 8-8.4MM Normal</td>
-                            <td style="font-size: 10px;"><span style="color: #3b82f6;">CDM</span> + <span style="color: #b45309;">001</span> + <span style="color: var(--success);">AC01</span></td>
+                            <td style="font-size: 10px;"><span style="color: #8b5cf6;">ACM</span> + <span style="color: #3b82f6;">CDM</span> + <span style="color: #b45309;">001</span> + <span style="color: var(--success);">AC01</span></td>
                         </tr>
                         <tr>
-                            <td><code style="font-weight: bold;">CDM001BA02</code></td>
+                            <td><code style="font-weight: bold;">ACMCDM001BA02</code></td>
                             <td>Cardamom 7-8MM Split</td>
-                            <td style="font-size: 10px;"><span style="color: #3b82f6;">CDM</span> + <span style="color: #b45309;">001</span> + <span style="color: var(--success);">BA02</span></td>
+                            <td style="font-size: 10px;"><span style="color: #8b5cf6;">ACM</span> + <span style="color: #3b82f6;">CDM</span> + <span style="color: #b45309;">001</span> + <span style="color: var(--success);">BA02</span></td>
                         </tr>
                         <tr style="background: var(--warning-light);">
-                            <td><code style="font-weight: bold;">PEP001</code></td>
+                            <td><code style="font-weight: bold;">GLBPEP001</code></td>
                             <td>Black Pepper (Single Item)</td>
-                            <td style="font-size: 10px;"><span style="color: #3b82f6;">PEP</span> + <span style="color: #b45309;">001</span> <span style="color: var(--text-light);">(no variants)</span></td>
+                            <td style="font-size: 10px;"><span style="color: #8b5cf6;">GLB</span> + <span style="color: #3b82f6;">PEP</span> + <span style="color: #b45309;">001</span> <span style="color: var(--text-light);">(no variants)</span></td>
                         </tr>
                         <tr>
-                            <td><code style="font-weight: bold;">OIL003</code></td>
+                            <td><code style="font-weight: bold;">SPXOIL003</code></td>
                             <td>Cardamom Oil (Single Item)</td>
-                            <td style="font-size: 10px;"><span style="color: #3b82f6;">OIL</span> + <span style="color: #b45309;">003</span> <span style="color: var(--text-light);">(no variants)</span></td>
+                            <td style="font-size: 10px;"><span style="color: #8b5cf6;">SPX</span> + <span style="color: #3b82f6;">OIL</span> + <span style="color: #b45309;">003</span> <span style="color: var(--text-light);">(no variants)</span></td>
                         </tr>
                     </tbody>
                 </table>
 
                 <div class="info-box" style="margin-top: 12px;">
-                    <strong>Single Items vs Item Groups:</strong> Single items have no variant suffix (e.g., <code>PEP001</code>). Item Groups with variants include attribute codes (e.g., <code>CDM001AC01</code>).
+                    <strong>Single Items vs Item Groups:</strong> Single items have no variant suffix (e.g., <code>GLBPEP001</code>). Item Groups with variants include attribute codes (e.g., <code>ACMCDM001AC01</code>).
                 </div>
 
                 <div class="info-box warning" style="margin-top: 8px;">
