--- a/products.html
+++ b/products.html
@@ -779,8 +779,8 @@
                         <span style="font-family: monospace; font-size: 18px; letter-spacing: 1px;">
                             <span style="background: #f3e8ff; padding: 8px 12px; border-radius: 6px 0 0 6px; border: 2px solid #8b5cf6; border-right: none;">ACM</span>
                             <span style="background: #dbeafe; padding: 8px 12px; border-radius: 0; border: 2px solid #3b82f6; border-left: none; border-right: none;">CDM</span>
-                            <span style="background: var(--warning-light); padding: 8px 12px; border-radius: 0; border: 2px solid var(--warning); border-left: none; border-right: none;">001</span>
-                            <span style="background: var(--success-light); padding: 8px 12px; border-radius: 0 6px 6px 0; border: 2px solid var(--success); border-left: none;">AC01</span>
+                            <span style="background: var(--warning-light); padding: 8px 12px; border-radius: 0; border: 2px solid var(--warning); border-left: none; border-right: none;">AAA</span>
+                            <span style="background: var(--success-light); padding: 8px 12px; border-radius: 0 6px 6px 0; border: 2px solid var(--success); border-left: none;">ACNM</span>
                         </span>
                     </div>
 
@@ -809,14 +809,14 @@
                             </div>
                         </div>
                         <div style="background: var(--warning-light); padding: 12px; border-radius: 8px; border-top: 3px solid var(--warning);">
-                            <strong style="color: #b45309; font-size: 12px;">Item Sequence</strong>
+                            <strong style="color: #b45309; font-size: 12px;">Item Code</strong>
                             <div style="font-size: 11px; color: var(--text-light); margin-top: 6px;">
-                                Sequential number within commodity
+                                Sequential alpha code within commodity
                             </div>
                             <div style="font-size: 10px; margin-top: 8px; padding: 6px; background: white; border-radius: 4px;">
-                                <code>001</code> = First item<br>
-                                <code>002</code> = Second item<br>
-                                <code>003</code> = Third item
+                                <code>AAA</code> = First item<br>
+                                <code>AAB</code> = Second item<br>
+                                <code>AAC</code> = Third item
                             </div>
                         </div>
                         <div style="background: var(--success-light); padding: 12px; border-radius: 8px; border-top: 3px solid var(--success);">
@@ -826,7 +826,7 @@
                             </div>
                             <div style="font-size: 10px; margin-top: 8px; padding: 6px; background: white; border-radius: 4px;">
                                 <code>AC</code> = Grade (8-8.4MM)<br>
-                                <code>01</code> = Sort (Normal)<br>
+                                <code>NM</code> = Sort (Normal)<br>
                                 <span style="color: var(--text-light);">Empty for Single Items</span>
                             </div>
                         </div>
@@ -844,30 +844,90 @@
                     </thead>
                     <tbody>
                         <tr style="background: var(--success-light);">
-                            <td><code style="font-weight: bold;">ACMCDM001AC01</code></td>
+                            <td><code style="font-weight: bold;">ACMCDMAAAACNM</code></td>
                             <td>Cardamom 8-8.4MM Normal</td>
-                            <td style="font-size: 10px;"><span style="color: #8b5cf6;">ACM</span> + <span style="color: #3b82f6;">CDM</span> + <span style="color: #b45309;">001</span> + <span style="color: var(--success);">AC01</span></td>
+                            <td style="font-size: 10px;"><span style="color: #8b5cf6;">ACM</span> + <span style="color: #3b82f6;">CDM</span> + <span style="color: #b45309;">AAA</span> + <span style="color: var(--success);">ACNM</span></td>
                         </tr>
                         <tr>
-                            <td><code style="font-weight: bold;">ACMCDM001BA02</code></td>
+                            <td><code style="font-weight: bold;">ACMCDMAAABCSP</code></td>
                             <td>Cardamom 7-8MM Split</td>
-                            <td style="font-size: 10px;"><span style="color: #8b5cf6;">ACM</span> + <span style="color: #3b82f6;">CDM</span> + <span style="color: #b45309;">001</span> + <span style="color: var(--success);">BA02</span></td>
+                            <td style="font-size: 10px;"><span style="color: #8b5cf6;">ACM</span> + <span style="color: #3b82f6;">CDM</span> + <span style="color: #b45309;">AAA</span> + <span style="color: var(--success);">BCSP</span></td>
                         </tr>
                         <tr style="background: var(--warning-light);">
-                            <td><code style="font-weight: bold;">GLBPEP001</code></td>
+                            <td><code style="font-weight: bold;">GLBPEPAAA</code></td>
                             <td>Black Pepper (Single Item)</td>
-                            <td style="font-size: 10px;"><span style="color: #8b5cf6;">GLB</span> + <span style="color: #3b82f6;">PEP</span> + <span style="color: #b45309;">001</span> <span style="color: var(--text-light);">(no variants)</span></td>
+                            <td style="font-size: 10px;"><span style="color: #8b5cf6;">GLB</span> + <span style="color: #3b82f6;">PEP</span> + <span style="color: #b45309;">AAA</span> <span style="color: var(--text-light);">(no variants)</span></td>
                         </tr>
                         <tr>
-                            <td><code style="font-weight: bold;">SPXOIL003</code></td>
+                            <td><code style="font-weight: bold;">SPXOILAAC</code></td>
                             <td>Cardamom Oil (Single Item)</td>
-                            <td style="font-size: 10px;"><span style="color: #8b5cf6;">SPX</span> + <span style="color: #3b82f6;">OIL</span> + <span style="color: #b45309;">003</span> <span style="color: var(--text-light);">(no variants)</span></td>
+                            <td style="font-size: 10px;"><span style="color: #8b5cf6;">SPX</span> + <span style="color: #3b82f6;">OIL</span> + <span style="color: #b45309;">AAC</span> <span style="color: var(--text-light);">(no variants)</span></td>
                         </tr>
                     </tbody>
                 </table>
 
                 <div class="info-box" style="margin-top: 12px;">
-                    <strong>Single Items vs Item Groups:</strong> Single items have no variant suffix (e.g., <code>GLBPEP001</code>). Item Groups with variants include attribute codes (e.g., <code>ACMCDM001AC01</code>).
+                    <strong>Single Items vs Item Groups:</strong> Single items have no variant suffix (e.g., <code>GLBPEPAAA</code>). Item Groups with variants include attribute codes (e.g., <code>ACMCDMAAAACNM</code>).
+                </div>
+
+                <!-- Inventory Sequence Number -->
+                <h4 style="margin: 24px 0 12px; color: var(--primary-dark);">Inventory Code (with Sequence)</h4>
+                <p style="font-size: 12px; color: var(--text-light); margin-bottom: 12px;">When items are received into inventory, a <strong>sequence number</strong> is appended to track individual stock entries (batches, lots, or serial numbers).</p>
+
+                <div style="background: var(--bg); padding: 16px; border-radius: 8px;">
+                    <div style="text-align: center; margin-bottom: 12px;">
+                        <span style="font-family: monospace; font-size: 16px; letter-spacing: 1px;">
+                            <span style="background: #f3e8ff; padding: 6px 10px; border-radius: 6px 0 0 6px; border: 2px solid #8b5cf6; border-right: none;">ACM</span>
+                            <span style="background: #dbeafe; padding: 6px 10px; border-radius: 0; border: 2px solid #3b82f6; border-left: none; border-right: none;">CDM</span>
+                            <span style="background: var(--warning-light); padding: 6px 10px; border-radius: 0; border: 2px solid var(--warning); border-left: none; border-right: none;">AAA</span>
+                            <span style="background: var(--success-light); padding: 6px 10px; border-radius: 0; border: 2px solid var(--success); border-left: none; border-right: none;">ACNM</span>
+                            <span style="background: var(--error-light); padding: 6px 10px; border-radius: 0 6px 6px 0; border: 2px solid var(--error); border-left: none;">0001</span>
+                        </span>
+                    </div>
+                    <div style="text-align: center; font-size: 11px; color: var(--text-light);">
+                        <span style="color: #8b5cf6;">Org</span> +
+                        <span style="color: #3b82f6;">Commodity</span> +
+                        <span style="color: #b45309;">Item</span> +
+                        <span style="color: var(--success);">Variant</span> +
+                        <span style="color: var(--error);"><strong>Sequence</strong></span>
+                    </div>
+                </div>
+
+                <table style="font-size: 11px; width: 100%; margin-top: 16px;">
+                    <thead>
+                        <tr>
+                            <th>Inventory Code</th>
+                            <th>Description</th>
+                            <th>Use Case</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><code style="font-weight: bold;">ACMCDMAAAACNM<span style="color: var(--error);">0001</span></code></td>
+                            <td>First batch received</td>
+                            <td>Batch/Lot tracking</td>
+                        </tr>
+                        <tr style="background: var(--bg);">
+                            <td><code style="font-weight: bold;">ACMCDMAAAACNM<span style="color: var(--error);">0002</span></code></td>
+                            <td>Second batch received</td>
+                            <td>Different expiry date</td>
+                        </tr>
+                        <tr>
+                            <td><code style="font-weight: bold;">GLBPEPAAA<span style="color: var(--error);">0001</span></code></td>
+                            <td>First stock entry</td>
+                            <td>FIFO tracking</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <div class="info-box success" style="margin-top: 12px;">
+                    <strong>Why Sequence Numbers?</strong>
+                    <ul style="margin: 8px 0 0 0; padding-left: 20px; font-size: 12px;">
+                        <li><strong>Batch/Lot Tracking:</strong> Track items from different production batches separately</li>
+                        <li><strong>Expiry Management:</strong> Different batches may have different expiry dates</li>
+                        <li><strong>FIFO/LIFO:</strong> Enables accurate costing based on receipt order</li>
+                        <li><strong>Traceability:</strong> Trace specific units back to supplier/shipment</li>
+                    </ul>
                 </div>
 
                 <div class="info-box warning" style="margin-top: 8px;">
